--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Index.html</title>
-        <img src="https://images.app.goo.gl/qkUxXp1osUio4trv6" width="200">
     </head>
     <style>
     h1 {color: rgb(22, 38, 145); }
@@ -14,6 +13,7 @@
     </style>
     <body>
     <h1>What is html?</h1>
+        <img src="https://images.app.goo.gl/krtTyFkjdeuWkLaM8"img>
 <p><strong>Hypertext Markup Language</strong> (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
 <p>Web browsers receive <em>HTML</em> documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
 <p>HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. Inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.</p>
