--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>Index.html</title>
     </head>
     <style>
-    h1 {color: rgb(22, 38, 145); }
-    h2 {color: rgb(22, 38, 145); }
-    h3 {color: rgb(22, 38, 145); }
-        
+    h1 { color: rgb(22, 38, 145); }
+    h2 { color: rgb(22, 38, 145); }
+    h3 { color: rgb(22, 38, 145); }
+    body { font-size: 11px; }
     body{background-color: rgb(56, 207, 187);}
     </style>
     <body>
