--- a/accessibility.html
+++ b/accessibility.html
@@ -29,10 +29,25 @@ particular webpage features.<p/>
       <li>Guideline 7: Ensure user control of time sensitive content changes</li>
       <li>Guideline 8: Ensure direct accessibility of embedded user interfaces</li>
       <li>Guideline 9: Design for device independence</li>
-       <li>Guideline 10: User interim solutions</li>
-       <li>Guideline 11: Use W3C technologies and guidelines</li>
-       <li>Guideline 12: Provide context and orientation information</li>
-       <li>Guideline 13: Provide clear navigation mechanisms</li>
-       <li>Guideline 14: Ensure that documents are clear and simple</li>
+      <li>Guideline 10: User interim solutions</li>
+      <li>Guideline 11: Use W3C technologies and guidelines</li>
+      <li>Guideline 12: Provide context and orientation information</li>
+      <li>Guideline 13: Provide clear navigation mechanisms</li>
+      <li>Guideline 14: Ensure that documents are clear and simple</li>
+      <p>Each of the in total 65 WCAG 1.0 checkpoints has an assigned priority level based on the
+checkpoint's impact on accessibility:</p>  
+      <li>Priority 1: Web developers must satisfy these requirements, otherwise it will be
+impossible for one or more groups to access the Web content. Conformance to this
+level is described as A.</li>
+      <li>Priority 2: Web developers should satisfy these requirements, otherwise some
+groups will find it difficult to access the Web content. Conformance to this level is
+described as AA or Double-A.</li>
+      <li>Priority 3: Web developers may satisfy these requirements to make it easier for
+some groups to access the Web content. Conformance to this level is described
+as AAA or Triple-A.</li>
+        <p><strong>WCAG Samurai</strong></p>
+        <p>n February 2008, The WCAG Samurai, a group of developers independent of the W3C,
+published corrections for, and extensions to, the WCAG 1.0.</p> 
+        <h3>WCAG 2.0</h3>
     </body>
 </html>
