--- a/accessibility.html
+++ b/accessibility.html
@@ -49,5 +49,56 @@ as AAA or Triple-A.</li>
         <p>n February 2008, The WCAG Samurai, a group of developers independent of the W3C,
 published corrections for, and extensions to, the WCAG 1.0.</p> 
         <h3>WCAG 2.0</h3>
+        <p>WCAG 2.0 was published as a W3C Recommendation on 11 December 2008. It consists of
+twelve guidelines (untestable) organized under four principles (websites must
+be perceivable, operable, understandable, and robust). Each guideline has testable
+success criteria (61 in all). The W3C's Techniques for WCAG 2.0 is a list of techniques that
+support authors to meet the guidelines and success criteria. The techniques are
+periodically updated whereas the principles, guidelines and success criteria are stable and
+do not change.</p>
+        <p><strong>Principles</strong></p>
+        <p><strong>Perceivable</strong></p>
+        <p>Information and user interface components must be presentable to users in ways they can
+perceive.</p>
+        <li>Guideline 1.1: Provide text alternatives for any non-text content so that it can be
+changed into other forms people need, such as large print, braille, speech, symbols or
+simpler language.</li>
+        <li>Guideline 1.2: Time-based media: Provide alternatives for time-based media.</li>
+        <li>Guideline 1.3: Create content that can be presented in different ways (for example
+simpler layout) without losing information or structure.</li>
+        <li>Guideline 1.4: Make it easier for users to see and hear content including separating
+foreground from background.</li>
+        <p><strong>Operable</strong></p>
+        <p>User interface components and navigation must be operable.</p>
+        <li>Guideline 2.1: Make all functionality available from a keyboard.</li>
+        <li>Guideline 2.2: Provide users enough time to read and use content.</li>
+        <li>Guideline 2.3: Do not design content in a way that is known to cause seizures.</li>
+        <li>Guideline 2.4: Provide ways to help users navigate, find content, and determine
+where they are.</li>
+        <p><strong>Understandable</strong></p>
+        <p>Information and the operation of user interface must be understandable.</p>
+        <li>Guideline 3.1: Make text content readable and understandable.</li>
+        <li>Guideline 3.2: Make web pages appear and operate in predictable ways.</li>
+        <li>Guideline 3.3: Help users avoid and correct mistakes.</li>
+        <p><strong>Robust</strong></p>
+        <p>Content must be robust enough that it can be interpreted reliably by a wide variety of user
+agents, including assistive technologies.</p>
+        <li>Guideline 4.1.: Maximize compatibility with current and future user agents, including
+assistive technologies.</li>
+        <p>WCAG 2.0 uses the same three levels of conformance (A, AA, AAA) as WCAG 1.0, but has
+redefined them. The WCAG working group maintains an extensive list of web accessibility
+techniques and common failure cases for WCAG 2.0.</p>
+        <p><strong>Criticism of WAI guidelines</strong></p>
+        <p>There has been criticism of the W3C process, claiming that it does not sufficiently put the
+user at the heart of the process. There was a formal objection to WCAG's original claim that
+WCAG 2.0 will address requirements for people with learning disabilities and cognitive
+limitations headed by Lisa Seeman and signed by 40 organisations and people. In articles
+such as "WCAG 2.0: The new W3C guidelines evaluated", "To Hell with WCAG 2.0" and
+"Testability Costs Too Much", the WAI has been criticised for allowing WCAG 1.0 to get
+increasingly out of step with today's technologies and techniques for creating and
+consuming web content, for the slow pace of development of WCAG 2.0, for making the
+new guidelines difficult to navigate and understand, and other argued failings.</p>
+        <p>In Spain, UNE 139803 is the norm entrusted to regulate web accessibility. This standard is
+based on Web Content Accessibility Guidelines 1.0.</p>
     </body>
 </html>
