--- a/accessibility.html
+++ b/accessibility.html
@@ -100,5 +100,6 @@ consuming web content, for the slow pace of development of WCAG 2.0, for making 
 new guidelines difficult to navigate and understand, and other argued failings.</p>
         <p>In Spain, UNE 139803 is the norm entrusted to regulate web accessibility. This standard is
 based on Web Content Accessibility Guidelines 1.0.</p>
+        <title>Index.html</title> <style> h1 { color: rgb(22, 38, 145); } h2 { color: rgb(22, 38, 145); } h3 { color: rgb(22, 38, 145); } body{background-color: rgb(56, 207, 187);} body { font-size: 26px; } </style>
     </body>
 </html>
